# gym-multigrid

./: .gitignore  CONTRIBUTING.md  README.md  collect_dqn.py  collect_ppo.py  collect_sfdqn.py  collect_usfdqn.py  gpi_eval_sfdqn.py  ma_usfdqn_parners.py  pyproject.toml  sf_gpi.py  sfdqn_partners.py  usfdqn_parners.py
docs/environments/: ctf.md
gym_multigrid/: __init__.py  agent.py  collect_dqn.py  collect_ppo.py  collect_ql.py  collect_sfdqn.py  collect_sfql.py  grid.py  multigrid.py  object.py  rendering.py  typing.py  world.py
gym_multigrid/core/: agent.py  constants.py  grid.py  object.py  world.py
gym_multigrid/envs/: __init__.py  collect_game.py  ctf.py  four_rooms.py  fourrooms.py  fr.py  lavarooms.py  marllib_wildfire.py  maze.py  soccer_game.py  wildfire.py
gym_multigrid/policy/: base.py  viz.py
gym_multigrid/utils/: manual_control.py  map.py  misc.py  rendering.py  window.py
logs/: seed_sfdqn_lr_0.0001.json  seed_sfdqn_lr_0.0003.json  seed_sfdqn_lr_0.001.json  seed_sfdqn_lr_0.003.json  seed_sfdqn_lr_0.01.json  seed_sfdqn_lr_1e-05.json  seed_sfdqn_lr_3e-05.json  seed_usfdqn_lr_0.0001.json  seed_usfdqn_lr_0.0003.json  seed_usfdqn_lr_0.001.json  seed_usfdqn_lr_0.003.json  seed_usfdqn_lr_0.01.json  seed_usfdqn_lr_1e-05.json  seed_usfdqn_lr_3e-05.json
models/mausf/: redpartner_psi1.torch  redpartner_psi2.torch  redpartner_psi3.torch
models/sfdqn/: lr_3e-05_rep_0_w_1.0_0.0_1.0_psi1.torch  lr_3e-05_rep_0_w_1.0_0.0_1.0_psi2.torch  lr_3e-05_rep_0_w_1.0_0.0_1.0_psi3.torch  lr_3e-05_rep_0_w_1.0_1.0_0.0_psi1.torch  lr_3e-05_rep_0_w_1.0_1.0_0.0_psi2.torch  lr_3e-05_rep_0_w_1.0_1.0_0.0_psi3.torch  lr_3e-05_rep_1_w_1.0_0.0_1.0_psi1.torch  lr_3e-05_rep_1_w_1.0_0.0_1.0_psi2.torch  lr_3e-05_rep_1_w_1.0_0.0_1.0_psi3.torch  lr_3e-05_rep_1_w_1.0_1.0_0.0_psi1.torch  lr_3e-05_rep_1_w_1.0_1.0_0.0_psi2.torch  lr_3e-05_rep_1_w_1.0_1.0_0.0_psi3.torch  lr_3e-05_rep_2_w_1.0_0.0_1.0_psi1.torch  lr_3e-05_rep_2_w_1.0_0.0_1.0_psi2.torch  lr_3e-05_rep_2_w_1.0_0.0_1.0_psi3.torch  lr_3e-05_rep_2_w_1.0_1.0_0.0_psi1.torch  (+2 more)
scripts/: main_1v1_ctf_rl.py  main_mvn_ctf_rl.py
sf-learner-twohot-models/: orangepartner_psi1.torch  orangepartner_psi2.torch  orangepartner_psi3.torch  redpartner_psi1.torch  redpartner_psi2.torch  redpartner_psi3.torch
tests/: test_ctf.py  test_env.py  test_fourroom.py  test_maze.py  test_wildfire.py
tests/assets/: board_maze.txt  (+1 more)
(+76 files in other folders)
