[tool.poetry]
name = "trg-multigrid"
version = "0.1.0"
description = "Muti-agent gymnasium gridworld environments"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gym_multigrid"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gymnasium = "^0.26"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
imageio = "^2.28.1"
scikit-learn = "^1.2.2"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"
# default = false
# secondary = false