[tool.poetry]
name = "gym-multigrid"
version = "0.1.0"
description = "Muti-agent gymnasium gridworld environments"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>", "Rupal Nigam"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gym_multigrid"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
gymnasium = "^0.26"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
imageio = "^2.28.1"
scikit-learn = "^1.2.2"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
tqdm = "^4.65.0"
tensorboard = "^2.13.0"
torch-tb-profiler = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"
# default = false
# secondary = false