[tool.poetry]
name = "gym-multigrid"
version = "0.2.0"
description = "Muti-agent gymnasium gridworld environments"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>", "Rupal Nigam"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gym_multigrid" }]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.26"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
imageio = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
